# baalue_gui

./: .gitignore  README.md  TODO  configure.ac  do_all_in_one_step.sh
Documentation/: Makefile.am  communication.md  howto_baalue.txt
etc/: Makefile.am
lib/: Makefile.am  baalue.c  libservice.h
man/: Makefile.am  baalue.1  baalue_gui.1
po/: POTFILES.in  baalue_gui.pot  de.po
scripts/: Makefile.am  baalue_gui_script.sh
src/: Makefile.am  common.h  gui.c  main.c  messages.c  threads.c
